--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "@ionic/storage": "2.1.3",
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
-    "angularfire2": "^5.0.0-rc.6.0",
-    "firebase": "^4.12.1",
+    "firebase": "^4.13.0-7",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.8",
@@ -39,7 +38,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
-    "angularfire2": "^5.0.0-rc.6",
+    "angularfire2": "^5.0.0-rc.7.0-next",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project"
