Added name to the project and config connection to ionic pro

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "wallaSaharaUI",
-  "app_id": "",
+  "app_id": "c705da65",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
