--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wallaSaharaUI",
+  "name": "wallasaharaui",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
@@ -29,7 +29,8 @@
     "@ionic/storage": "2.1.3",
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
-    "firebase": "^4.13.0-7",
+    "angularfire2": "^5.0.0-rc.6",
+    "firebase": "^4.9.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.8",
@@ -38,8 +39,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
-    "angularfire2": "^5.0.0-rc.7.0-next",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "App to sale your products free."
 }
