--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
     "angularfire2": "^5.0.0-rc.6",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-whitelist": "git+https://github.com/apache/cordova-plugin-whitelist.git",
     "firebase": "^4.9.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -41,5 +43,10 @@
     "@ionic/app-scripts": "3.1.9",
     "typescript": "~2.6.2"
   },
-  "description": "App to sale your products free."
+  "description": "App to sale your products free.",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {}
+    }
+  }
 }
