--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "@ionic/storage": "2.1.3",
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
-    "angularfire2": "^5.0.0-rc.8.1-next",
+    "angularfire2": "^5.0.0-rc.6",
     "cordova-android": "7.0.0",
     "cordova-plugin-whitelist": "git+https://github.com/apache/cordova-plugin-whitelist.git",
-    "firebase": "^5.0.2-0",
+    "firebase": "^4.9.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.8",
