--- a/package.json
+++ b/package.json
@@ -21,18 +21,23 @@
     "@angular/http": "5.2.9",
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
+    "@ionic-native/android-permissions": "^4.7.0",
     "@ionic-native/camera": "4.3.3",
     "@ionic-native/core": "4.6.0",
+    "@ionic-native/diagnostic": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
-    "angularfire2": "^5.0.0-rc.6",
-    "cordova-android": "7.0.0",
+    "angularfire2": "5.0.0-rc.6",
+    "cordova-android": "^7.1.0",
+    "cordova-plugin-android-permissions": "^1.0.0",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-whitelist": "git+https://github.com/apache/cordova-plugin-whitelist.git",
-    "firebase": "^4.9.1",
+    "cordova.plugins.diagnostic": "^4.0.7",
+    "firebase": "4.9.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.8",
@@ -46,7 +51,10 @@
   "description": "App to sale your products free.",
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-android-permissions": {},
+      "cordova.plugins.diagnostic": {},
+      "cordova-plugin-camera": {}
     }
   }
 }
