--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ $RECYCLE.BIN/
 Thumbs.db
 UserInterfaceState.xcuserstate
 package-lock.json
+functions/wallah-sahara-firebase-adminsdk-gc69i-013535e46b.json
