--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ Thumbs.db
 UserInterfaceState.xcuserstate
 package-lock.json
 functions/wallah-sahara-firebase-adminsdk-gc69i-013535e46b.json
+package-lock.json
