--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "lodash": "^4.17.10",
-    "ng-lazyload-image": "^4.0.0",
+    "ng-lazyload-image": "3.4.2",
     "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
