--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/camera": "4.3.3",
     "@ionic-native/core": "4.6.0",
     "@ionic-native/diagnostic": "^4.7.0",
+    "@ionic-native/facebook": "^4.11.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/pro": "1.0.20",
@@ -32,9 +33,10 @@
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
     "angularfire2": "5.0.0-rc.6",
-    "cordova-android": "^7.1.0",
+    "cordova-android": "7.0.0",
     "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-facebook4": "^2.2.0",
     "cordova-plugin-whitelist": "git+https://github.com/apache/cordova-plugin-whitelist.git",
     "cordova.plugins.diagnostic": "^4.0.7",
     "firebase": "4.9.1",
@@ -44,7 +46,11 @@
     "ng-lazyload-image": "3.4.2",
     "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-ionic-webview": "^1.2.0",
+    "cordova-plugin-ionic-keyboard": "^2.0.5"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.1.11",
@@ -56,7 +62,18 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-android-permissions": {},
       "cordova.plugins.diagnostic": {},
-      "cordova-plugin-camera": {}
-    }
+      "cordova-plugin-camera": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "1917268391658809",
+        "APP_NAME": "Wallah"
+      }
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
